--- a/html/calender.html
+++ b/html/calender.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Calender</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     <style>
         .footer {
             height: 36px;
@@ -17,6 +19,9 @@
         h5 {
             margin: 0;
             font-size: 15px;
+        }
+        .button {
+            margin-top: 14px;
         }
     </style>
 </head>
@@ -58,27 +63,21 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <h1 class=" mt-4">Search for availability</h1>
-                <form action="calender.html" method="GET">
-                    <div class="row">
-                        <div class="col">
-                            <div class="mb-3">
-                                <label for="start_day" class="form-label">Starting Date</label>
-                                <input required type="date" class="form-control" id="start_day" aria-describedby="startDateHelp" name="start_day" placeholder="Date">
-                                <div id="startDateHelp" class="form-text">Please enter Your starting date</div>
-                            </div>
-                        </div>
 
-                        <div class="col">
-                            <div class="mb-3 col">
-                                <label for="end_day" class="form-label">Ending Date</label>
-                                <input required type="date" class="form-control" id="end_day" aria-describedby="endDateHelp" name="end_day">
-                                <div id="endDateHelp" class="form-text">Please enter Your ending date</div>
+            <h1 class=" mt-4">Search for availability</h1>
+
+                    <div id="foo">
+
+                        <form class="row needs-validation" novalidate>
+                            <div class="col">
+                                <input class="form-control" type="text" name="start" required placeholder="Starting Date">
+                                <button type="submit" class="btn btn-primary button">Search availability</button>
                             </div>
-                        </div>
+                            <div class="col">
+                                <input class="form-control" type="text" name="end" required placeholder="Ending Date">
+                            </div>
+                        </form>
                     </div>
-                        <button type="submit" class="btn btn-primary">Search availability</button>
-                </form>
         </div>
     </div>
 </div>
@@ -96,5 +95,113 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
+<script src="https://unpkg.com/notie"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+    const elem = document.getElementById('foo');
+    const rangepicker = new DateRangePicker(elem, {
+        // ...options
+    });
+
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        let forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+
+    const notify = (msg, msgType) => {
+        notie.alert({
+            type: msgType,
+            text: msg
+        })
+    }
+
+    const notifyModal = (title, html, icon, button) => {
+        Swal.fire({
+            title: title,
+            html: html,
+            icon: icon,
+            confirmButtonText: button
+        })
+    }
+
+    const prompt = () => {
+
+        let toast = param => {
+            const {
+                msg = "",
+                icon = "success",
+                position = "top-end"
+            } = param
+
+            const Toast = Swal.mixin({
+                toast: true,
+                title: msg,
+                position: position,
+                icon: icon,
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.addEventListener('mouseenter', Swal.stopTimer)
+                    toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+            })
+
+            Toast.fire({})
+        }
+
+        let success = param => {
+            const {
+                msg = "",
+                title = "",
+                footer = ""
+            } = param
+
+            Swal.fire({
+                icon: 'success',
+                title: title,
+                text: msg,
+                footer: footer
+            })
+        }
+        let error = param => {
+            const {
+                msg = "",
+                title = "",
+                footer = ""
+            } = param
+
+            Swal.fire({
+                icon: 'success',
+                title: title,
+                text: msg,
+                footer: footer
+            })
+        }
+        return {
+            toast,
+            success,
+            error
+        }
+    }
+
+</script>
 </body>
 </html>
