--- a/html/calender.html
+++ b/html/calender.html
@@ -6,24 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-    <style>
-        .footer {
-            height: 36px;
-            background-color: #398AB9;
-            margin-top: 15px;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        h5 {
-            margin: 0;
-            font-size: 15px;
-        }
-        .button {
-            margin-top: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="./static/css/styles.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -71,7 +54,7 @@
                         <form class="row needs-validation" novalidate>
                             <div class="col">
                                 <input class="form-control" type="text" name="start" required placeholder="Starting Date">
-                                <button type="submit" class="btn btn-primary button">Search availability</button>
+                                <button id="button" type="submit" class="btn btn-primary">Search availability</button>
                             </div>
                             <div class="col">
                                 <input class="form-control" type="text" name="end" required placeholder="Ending Date">
@@ -124,6 +107,26 @@
                 }, false)
             })
     })()
+    document.getElementById("button").addEventListener("click", () => {
+        let html = `
+            <form class="needs-validation" novalidate method="post" action="" id="check-availability-form">
+                <div class="row">
+                    <div class="col">
+                        <div class="row" id="reservation-dates-modal">
+                            <div class="col">
+                                <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
+                            </div>
+                            <div class="col">
+                                <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        `
+        custom({html, title: "Choose Your Dates"})
+
+    })
 
     const notify = (msg, msgType) => {
         notie.alert({
@@ -195,12 +198,45 @@
                 footer: footer
             })
         }
+        const custom = async (params) => {
+            const {html ="", title =""} = params
+
+            const { value: formValues } = await Swal.fire({
+                title: title,
+                html: html,
+                backdrop: false,
+                focusConfirm: false,
+                showCancelButton: true,
+                willOpen: () => {
+                    const elem = document.getElementById("reservation-dates-modal")
+                    const rp = new DateRangePicker(elem, {
+                        showOnFocus: true
+                    })
+                },
+                preConfirm: () => {
+                    return [
+                        document.getElementById('start').value,
+                        document.getElementById('end').value
+                    ]
+                },
+                didOpen: () => {
+                    document.getElementById("start").removeAttribute("disabled")
+                    document.getElementById("end").removeAttribute("disabled")
+                }
+            })
+
+            if (formValues) {
+                Swal.fire(JSON.stringify(formValues))
+            }
+        }
         return {
             toast,
             success,
-            error
+            error,
+            custom
         }
     }
+    const {toast, success, error, custom} = prompt()
 
 </script>
 </body>
