Adding html templates

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="reservation.html">Choose Date now</a>
+                        <a class="nav-link" href="search-availability.html">Choose Date now</a>
                     </li>
 
                     <li class="nav-item">
@@ -101,7 +101,7 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <a href="/reservation" class="btn btn-success">Choose date now</a>
+                <a href="search-availability.html" class="btn btn-success">Choose date now</a>
             </div>
         </div>
 
