--- a/static/president.html
+++ b/static/president.html
@@ -15,6 +15,9 @@
             padding: 1rem;
             color: wheat;
         }
+        .generals-image {
+            width: 50%;
+        }
     </style>
 
 </head>
@@ -43,7 +46,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="reservation.html">Choose Date now</a>
+                    <a class="nav-link" href="search-availability.html">Choose Date now</a>
                 </li>
 
                 <li class="nav-item">
@@ -57,13 +60,18 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mt-3">President Page</h1>
+            <img class="img-fluid img-thumbnail rounded mx-auto d-block generals-image" src="images/president.png" alt="generals quarters room">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center mt-3">President page</h1>
             <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci blanditiis consequatur cum dignissimos enim esse et fuga illo in inventore minus, mollitia nulla perferendis quasi reiciendis repellendus suscipit veritatis!</span><span>At commodi dolorum fuga fugit, ipsa iure laudantium sit sunt veniam! Autem dolor in iste placeat vitae? Cupiditate error exercitationem impedit voluptatibus. A, architecto eos et molestias nemo nisi quas?</span><span>Aut cumque dolorum facere impedit laborum magnam molestiae molestias omnis optio repellat. Aperiam consectetur dolorum, eum iusto quis ut vitae! Aperiam deserunt dicta dignissimos et exercitationem, fuga minima non qui.</span><span>Adipisci at autem cupiditate debitis dicta, dolore fugiat illum iure laboriosam maxime mollitia non obcaecati officiis porro quam qui quibusdam sed voluptatum. Ad asperiores cupiditate est hic possimus, reprehenderit saepe.</span><span>Aut eaque ex laborum maxime mollitia nihil porro saepe. Aliquid aspernatur corporis dicta distinctio enim facere facilis, fugiat laborum maxime placeat porro provident, quos, reiciendis sequi totam velit voluptates! Autem!</span><span>Aspernatur dignissimos, distinctio esse, expedita laborum magni minima nihil nisi quidem, quos repellendus sed ullam veniam? Accusamus, accusantium ad, aperiam architecto commodi illum maiores minus neque quas quasi quos tempore!</span></p>
         </div>
     </div>
     <div class="row">
         <div class="col text-center">
-            <a href="/reservation" class="btn btn-success">Choose date now</a>
+            <a href="/reservation-p" class="btn btn-success">Check availability</a>
         </div>
     </div>
 
