--- a/static/search-availability.html
+++ b/static/search-availability.html
@@ -81,7 +81,7 @@
         </div>
 
       </div>
-      <button id="check-btn" type="submit" class="btn btn-success">Check</button>
+      <button id="check-btn" type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Check</button>
     </form>
 
   </div>
@@ -100,6 +100,38 @@
     </div>
   </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Choose your dates</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col">
+            <div class="mb-3">
+              <label for="start_date" class="form-label">Start date</label>
+              <input required type="date" class="form-control" name="start_date" id="start_date">
+            </div>
+          </div>
+          <div class="col">
+            <div class="mb-3">
+              <label for="end_date" class="form-label">End Date</label>
+              <input required type="date" class="form-control" name="end_date" id="end_date">
+            </div>
+          </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
